# graph-disputes

./: .eslintignore  .eslintrc  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: server-ci-cd-mainnet.yml
.k8s/mainnet/: backend-server.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-nginx.conf  kustomization.yaml  server.yaml  service.yaml
analysis/: README.md
analysis/notebooks/: PoI comparison - TEMPLATE.ipynb  Subgraph Updates in Specific Blocks - TEMPLATE.ipynb
frontend/: .prettierrc  Dockerfile  README.md  next.config.js  package.json
frontend/assets/: base.less
frontend/assets/resets/: base.reset.less
frontend/assets/utils/: media-queries.less
frontend/components/: Layout.module.css  Layout.tsx
frontend/components/AddDisputeForm/: AddDisputeForm.tsx  styles.less
frontend/components/DisputeEvents/: DisputeEvents.tsx
frontend/components/DisputeItem/: DisputeItem.tsx  IndexerTable.tsx  styles.less
frontend/components/DisputeList/: DisputeList.tsx
frontend/pages/: _app.tsx  disputes.tsx  index.tsx
frontend/pages/dashboard/: events.tsx
frontend/store/: zustandStore.ts
frontend/types/: Dispute.tsx
scripts/: poi-divergence.r  poi-last-block.r
server/: .dockerignore  Dockerfile  Makefile  README.md  docker-build.sh  docker-entrypoint.sh  docker-run.sh  pyproject.toml  set_env.sh
server/analysis/: README.md  calculate_divergent_block.py
server/api/: asgi.py  config.py  logging.conf  main.py
server/api/analysis/: README.md  calculate_divergent_block.py  diff.py
server/api/dispute/: README.md  fsm.py  w3.py  web3.py
server/api/graphql/: README.md  __init__.py
server/api/models/: __init__.py  disputes.py  divergent_blocks.py  indexer.py  indexer_uploads.py  users.py
server/api/scripts/: upload_poi.sh  upload_poi_noexist.sh
server/api/storage/: README.md  gcloud.py
server/api/transport/: list.py  upload.py
server/api/utils/: README.md  notifier.py
server/api/views/: README.md  disputes.py  divergent_blocks.py  indexers.py  users.py
server/insomnia/: Insomnia_2021-08-09.json  README.md
server/migrations/: env.py
server/migrations/versions/: 0a4da3e8d061_make_indexer_id_nullable.py  1d6e912df503_make_indexer_metadata_nullable.py  294b345c4911_drop_indexer_table_id_col.py  3ddcb30210b0_add_nullable_to_disputes.py  5e63b2f8ab2b_make_indexer_datetime_default_to_.py  5f6805babf4e_make_disputes_unique_and_use_upsert.py  689d077b3e86_add_datetime_to_dispute.py  7326125c8cc8_merge_first_and_upload_data_kind.py  a2d457a4ae4e_drop_stage_for_disputes.py  bce5c0d728a8_make_auto_update_on_dispute.py  bf38668628e4_make_upload_data_kind_an_enum.py  c5d0a5062aa4_create_enum_field_for_dispute.py  d9f896813d20_generate_base_dispute_tables.py  e5d6dcc9c7fe_create_indexer_metadata.py
server/notebooks/data/: dump_tables.sh
src/: config.ts  dispute.ts  env.ts  index.ts  logging.ts  model.ts  network.ts  poi.ts  resolver.ts  run.ts  store.ts  utils.ts
src/commands/: create.ts  inspect.ts  list.ts  poi.ts  pois.ts  resolve.ts  setup.ts  show.ts
test/: dispute.test.ts
