[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["AG <goebel.aaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy="1.3.24"
gino="1.0.1"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
gino-starlette = "^0.1.2"
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
black = "^21.7b0"
pandas = "^1.3.1"
transitions = "^0.8.8"
starlette-context = "^0.3.3"
google-cloud-storage = "^1.41.1"
PyYAML = "^5.4.1"
python-multipart = "^0.0.5"
gcloud-aio-storage = "^6.1.0"
certifi = "^2021.5.30"
gcloud-aio-auth = "^3.6.1"
tensorflow = "^2.5.0"
gql = "^2.0.0"
greenlet = "^1.1.1"
fsspec = "^2021.7.0"
gcsfs = "^2021.7.0"
ipfshttpclient = {version = "0.8.0a2", allow-prereleases = true}
web3 = "5.23.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
jupyter = "^1.0.0"
pytest = "^6.2.4"
requests = "^2.26.0"
poetry-lock-package = "^0.4.2"

[tool.poetry.plugins."api.modules"]
users= "api.views.users"
disputes = "api.views.disputes"
indexers = "api.views.indexers"
divergent_blocks = "api.views.divergent_blocks"
upload = "api.transport.upload"
list = "api.transport.list"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"